2009-08-17  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-font-lock-keywords)
	(eselect-mode-font-lock-keywords): It is more efficient to collect
	all keywords for a font first, before computing their regexp.
	Thanks to Elias Pipping for pointing this out.
	(ebuild-mode-collect-equal-cdrs): New function.
	(ebuild-mode-make-keywords-list): Define also at compile time.

2009-08-16  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	python_makesym is not used anymore, thus remove

2009-08-15  Ulrich Mueller  <ulm@gentoo.org>

	* eselect-mode-keywords.el (eselect-mode-keywords-config)
	(eselect-mode-keywords-core, eselect-mode-keywords-manip)
	(eselect-mode-keywords-multilib, eselect-mode-keywords-output)
	(eselect-mode-keywords-package-manager)
	(eselect-mode-keywords-path-manipulation)
	(eselect-mode-keywords-tests): New function names and update
	according to doc/developer-guide.txt of current eselect version.

2009-07-30  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-warn): Warn on
	bindnow-flags usage

2009-05-30  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.12 released.

2009-05-24  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-sort-keywords): Change sorting
	order, reflecting a change in gentoolkit-dev.

2009-05-05  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-deprecated):
	Add prepalldocs, dosed and dohard, as we don't want to encourage
	people.

2009-04-12  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-gnome2-utils):
	Add gnome2_gconf_savelist and gnome2_icon_savelist functions, and
	some corrections.

2009-03-12  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-rpm):
	add rpm_spec_epatch function
	(ebuild-mode-keywords-cmake-utils): add support for cmake-utils.eclass
