@@ -1,3 +1,8 @@
+2009-08-20  Christian Faulhammer  <fauli@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
+	keywords from reworked python.eclass
+
 2009-08-17  Ulrich Mueller  <ulm@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-mode-font-lock-keywords)
